rustdocs/errors/rust-bitcoin-primitives-src-hash_types-ntxid.rs.txt
error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/primitives/src/hash_types/ntxid.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `hashes`
  --> ../rust-bitcoin/primitives/src/hash_types/ntxid.rs:12:5
   |
12 | use hashes::sha256d;
   |     ^^^^^^ use of unresolved module or unlinked crate `hashes`
   |
help: you might be missing a crate named `hashes`, add it to your project and import it in your code
   |
 5 + extern crate hashes;
   |

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/primitives/src/hash_types/./generic.rs:29:1
   |
29 | super::impl_bytelike_traits!(HashType, LEN);
   | ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hashes`
  --> ../rust-bitcoin/primitives/src/hash_types/./generic.rs:10:30
   |
10 | const LEN: usize = <Inner as hashes::Hash>::LEN;
   |                              ^^^^^^ use of unresolved module or unlinked crate `hashes`
   |
   = help: you might be missing a crate named `hashes`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
